incorporated Chris review comments

--- a/about.html
+++ b/about.html
@@ -29,17 +29,17 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
-                  <li><a data-scroll="" href="./#projects">portfolio</a></li>
+                  <li><a data-scroll="" href="./#projects">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a data-scroll="" href="./#contact">contact</a></li>
+                  <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
                   </a>
               </ul>
           </nav>
           <section class="intro">
               <div id="more-container">
                   <h1>/gyl.bɑ.hɑɾ/</h1>
-                  <p>
-                  <h2 style="width:80%;">or you can call me G for short; Rose for translation</h2>
+                  <br>
+                  <h2>or you can call me G for short; Rose for translation</h2>
               </div>
           </section>
       </header>
@@ -47,11 +47,11 @@
 
           <section class="about">
                 <div class="intro-me">
-                    <div id="container">
+                    <div class="part" id="container">
                         <img src="images/me.png">
-                        <h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.
-                        <p>I love solving puzzles and challenges.</h2>
-                        <p>
+                        <h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2>
+                        <p>I love solving puzzles and challenges.</p>
+                        <br>
                         <h4>Summary</h4>
                         <p>I'm a UX designer with expertise in business development and strategy.
                           Sector-agnostic, my main role is to help manage and guide you to reach
@@ -71,32 +71,30 @@
                               </div>
                               <div class="clearfix"> </div>
                           </div>
+                          <br>
+                          <a href="#"><button>download resume</button></a>
                     </div>
                 </div>
-                <div class="magic">
-                    <div id="only-width">
-                      <h3>Origin Story</h3>
-                      <h2 style="padding-top:2rem;">“OW!”</h2>
+                <div class="part">
+                    <div id="container">
+                      <h2 id="color">Origin Story</h2>
+                      <h1 style="padding-top:2rem;">“OW!”</h1>
                       <p>It happened, again. My husband just walked his toe <i class="fas fa-shoe-prints" style="color: #87EED5;"></i> right into the bookshelf. Clumsiness aside,
                         we all should be able to freely walk our living rooms, regardless of size, sans fear of pain.
                       <p>Determined to find a solution, while he was at work the next day, with a Hulk-like strength<img src="images/icons/icons8-hulk.png" style="height: 25px;">that only appears during interior decorating-spurts,
                         I rearranged our furniture. Then I waited and observed. He would run into something else <i class="fas fa-couch"></i>. So I’d rearrange again,
                         then observe again.
-                      <p>After a few attempts, we finally had a solution - we cut off <i class="fas fa-hand-scissors"></i> his toe. Kidding! We found a layout that worked best
+                      <p>After a few attempts, we finally had a solution &mdash; we cut off <i class="fas fa-hand-scissors"></i> his toe. Kidding! We found a layout that worked best
                         for both of us and that looked as nice as possible without replacing or removing our furniture.
-                      <p>That end-solution created a level of elation that single-handedly winning a $7 million program to create an affordable
-                        housing market in Haiti could not. I wanted to do more than just win a proposal. I wanted to create and work through
-                        something until it worked, while also addressing my love of making things pretty.
-                      <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby + skills. I immediately
-                        researched programs to learn how to utilize my expertise and learn design tools and chose Bloc’s Designer Track. Thanks
-                        to them, I now can claim all of the following skills:
+                      <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby and skills. I immediately
+                        researched programs to learn how to utilize my expertise and learn design tools and chose <a href="https://www.bloc.io/designer-track">Bloc’s Designer Track</a>.
                     </div>
                 </div>
-                <div class="background">
-                    <div id="only-width">
-                        <h3>what have i been up to?</h3>
-                        <p>My journey to becoming a freelance UX designer living in Milan, includes more than 8 years
-                          working in international development, where according to Malcolm Gladwell, I became an
+                <div class="part">
+                    <div id="container">
+                        <h2 id="color">What Have I Been Up To?</h2>
+                        <p>My journey includes more than 8 years of
+                          working in international development, where &mdash; according to Malcolm Gladwell &mdash; I became an
                           expert in development finance and agriculture, and got paid to travel to Myanmar, Kosovo,
                           Haiti, Bangladesh, Guatemala, Kenya, and most recently the Philippines. It also includes
                           an underlying story of self-discovery and an MBA.
@@ -104,7 +102,20 @@
                           grants and contracts for USG-funded programming in developing countries and designing and implementing
                           marketing strategies to raise company visibility. My experience was mainly with small companies - with
                           a maximum of 40 people and a 5-person business development team. I wore a lot of hats and got a lot of
-                          opportunities.<!--:
+                          opportunities:
+                          <ul class="list-item">
+                              <li>Acquired more than $80 million for programs in resource-poor areas:
+                                affordable housing in Haiti and a fintech study in the Philippines</li>
+                              <li>Designed information architecture and design of SharePoint sites for two companies and managed
+                                the company transition</li>
+                              <div class="dropdown"><li>Keynote speaker for a Filipino national credit union association's annual conference,
+                                to discuss the importance of technology</li>
+                                  <div class="dropdown-content"><img src="images/keynote.png"></div>
+                              </div>
+                              <li>Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
+                          </ul>
+
+                          <!--:
                         <ul class="examples">
                             <li class="first" id="one">Acquired more than $80 million for programs in resource-poor areas:
                               affordable housing in Haiti and a fintech study in the Philippines</li>
@@ -121,27 +132,24 @@
                           I was only needed to kickstart their ideas or speed up activities with fundraising. I also learned that
                           the ideas or programs that took a community-based approach were the most successful and had the most
                           beneficial side-effects like increased savings.
-                        <p>Now, I’m an MBA student at SDA Bocconi, specializing in product development, marketing, and innovation.
+                        <p>Now, I’m an MBA student at <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>, specializing in product development, marketing, and innovation.
                           I’ll be getting the management background and understanding I’m confident I’ll need in the future.
-                          <div class="buttons">
-                                <a href="#"><button>download resume</button></a>
-                          </div>
                     </div>
                 </div>
                     <div class="clearfix"></div>
           </section>
-          <section id="contact">
+          <!--section id="contact">
               <div class="contact-text">
                   <h2>let's chat &darr;</h2>
               </div>
-          </section>
+          </section-->
     <!--
           <section class="moodboard">
                 <h2>visual inspiration</h2>
                 <img src="images/Moodboard.png">
           </section>
-    -->
-          <div class="clearfix"></div>
+
+          <div class="clearfix"></div-->
       </main>
       <footer>
           <div class="footer-info">
@@ -150,7 +158,7 @@
                         <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                             <i class="fab fa-linkedin-in"></i></a>
                         </li>
-                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                        <li><a href="mailto:g.leyla.ok@gmail.com" alt="email me">
                             <i class="fas fa-envelope"></i></a>
                         </li>
                         <li><a href="https://github.com/okleyla" alt="github">
