--- a/coop.html
+++ b/coop.html
@@ -33,9 +33,9 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                   <div class="clearfix"></div>
-                  <li><a href="index.html">portfolio</a></li>
+                  <li><a href="index.html">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                  <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
                   </a>
               </ul>
           </nav>
@@ -318,7 +318,7 @@
                       <h2>If you’d like to get in touch to work or just chat about
                         all things design & milan</h2>
                         <p></p>
-                      <a href="mailto:gokuyan@gmail.com"><button>email me</button></a>
+                      <a href="mailto:g.leyla.ok@gmail.com"><button>email me</button></a>
                   </div>
               </div>
           </section>
@@ -332,7 +332,7 @@
                         <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                             <i class="fab fa-linkedin-in"></i></a>
                         </li>
-                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                        <li><a href="mailto:g.leyla.ok@gmail.com" alt="email me">
                             <i class="fas fa-envelope"></i></a>
                         </li>
                         <li><a href="https://github.com/okleyla" alt="github">
