--- a/rfs.html
+++ b/rfs.html
@@ -36,9 +36,9 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i></a>
                   <div class="clearfix"></div>
-                  <li><a href="index.html">portfolio</a></li>
+                  <li><a href="index.html">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a data scroll href="#contact">contact</a></li>
+                  <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
                   </a>
               </ul>
           </nav>
@@ -53,7 +53,7 @@
                           <a data scroll href="#prototype"><button class="case-study-button">view prototype</button></a>
                       </div>
                       <div>
-                          <img src="images/rfs-header.png" style="width:100%;">
+                          <img src="images/rfs/rfs-header.png" style="width:100%;">
                       </div>
                   </div>
               <div class="clearfix"></div>
@@ -110,15 +110,15 @@
               </div>
                   <div class="research">
                       <div class="part" id="container">
-                          <h1 style="text-align: center;">The Journey</h1>
+                          <h1 class="journey" style="text-align: center;">The Journey</h1>
                           <p></p>
                           <div class="transformation">
                               <div class="first">
-                                  <h4 id="caption" style="text-align:center;">starting here</h4>
+                                  <h4 id="caption" style="text-align:center;">started here</h4>
                                   <img src="images/etsy.png" id="shadow">
                               </div>
                               <div class="second">
-                                  <h4 id="caption" style="text-align:center;">ending here</h4>
+                                  <h4 id="caption" style="text-align:center;">ended here</h4>
                                   <img src="images/rfs-etsy.png" class="second" id="shadow">
                               </div>
                               <div class="clearfix"></div>
@@ -169,6 +169,8 @@
                                   <img src="images/rfs/jeanc.png" class="second">
                                   <div class="clearfix"></div>
                               </div>
+                            <br>
+                            <button>see user personas</button>
                       </div>
                   </div>
                   <div class="competitive-landscape" id="container">
@@ -177,12 +179,12 @@
                           <p>
                           <p>The stakeholder interview and research determined that
                             RFS's main competitors are Mr.
-                            Patina, J. Fitzpatrick Shoes,Septieme Largeur, Barker Shoes,
+                            Patina, J. Fitzpatrick Shoes, Septieme Largeur, Barker Shoes,
                             Crocket & Jones, Dandy Shoe Care</p>
-                          <ul class="list-item">
-                              <li>Price point: $300-$1,000</li>
-                              <li>Design aesthetic: craftsmanship, old school feel</li>
-                              <li>How they market: mainly social media</li>
+                          <ul class="lists">
+                              <li><b>Price point:</b> $300-$1,000</li>
+                              <li><b>Design aesthetic:</b> craftsmanship, old school feel</li>
+                              <li><b>How they market:</b> mainly social media</li>
                           </ul>
                           <ul class="inspo" id="no-mobile" style="margin-bottom:0;">
                               <div class="first" style="width:50%;">
@@ -200,10 +202,10 @@
                           <h4>Standing out</h4>
                           <p>We wanted to differentiate RFS from them, so looking
                             at the user research and landscape, we decided on the following:
-                          <ul class="list-item">
-                              <li>Lower price point: $75-$250</li>
-                              <li>Marketing: word of mouth, Google ads, and maybe social media</li>
-                              <li>Message to customers: Great craftsmanship.</li>
+                          <ul class="lists">
+                              <li><b>Lower price point:</b> $75-$250</li>
+                              <li><b>Marketing:</b> word of mouth, Google ads, and maybe social media</li>
+                              <li><b>Message to customers:</b> Great craftsmanship.</li>
                           </ul>
                       </div>
                       <div class="part">
@@ -227,7 +229,7 @@
                           <li>The shoes</li>
                           <li>About section</li>
                           <li>Product information</li>
-                          <li>e-commerce flow: cart, account, checkout, payment</li>
+                          <li>e-commerce flow</li>
                           <li>Reviews</li>
                           <li>Returns, shipping & delivery</li>
                       </ul>
@@ -254,9 +256,6 @@
               <div class="sketching">
                   <div class="part" id="container">
                       <h2>Sketching</h2>
-                      <p>Turning a site map into a website.</p>
-                      <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
-                        <button>lo-fi prototype</button></a>
                   </div>
                   <div class="part">
                         <div id="container">
@@ -302,6 +301,11 @@
                             </div>
                             <div class="clearfix"></div>
                         </div>
+                        <div id="width">
+                            <br>
+                            <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
+                              <button>lo-fi prototype</button></a>
+                        </div>
                   </div>
                   <div class="part">
                         <div id="container">
@@ -337,6 +341,11 @@
                             </div>
                             <div class="clearfix"></div>
                         </div>
+                        <div id="width">
+                            <br>
+                            <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
+                              <button>lo-fi prototype</button></a>
+                        </div>
                   </div>
                   <div class="part" id="container">
                       <h3>Product details</h3>
@@ -358,6 +367,9 @@
                           <img src="images/rfs-shoe-detail.png" class="full">
                       </div>
                       <div class="clearfix"></div>
+                      <br>
+                      <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
+                        <button>lo-fi prototype</button></a>
                   </div>
               </div>
               <div class="branding">
@@ -401,7 +413,7 @@
                           </div>
                           <div class="second">
                               <p id="caption" style="text-align:center;">all variations</p>
-                              <img src="images/logo-styles.png">
+                              <img src="images/rfs/logo-styles.png">
                               <div class="clearfix"></div>
                           </div>
                       </div>
@@ -457,7 +469,7 @@
               <div class="part" id="container">
                   <h2>Prototype</h2>
                   <p></p>
-                  <div id="video">
+                  <div class="video-responsive">
                       <iframe width="560" height="315"
                       src="https://www.youtube.com/embed/YCQ3W7ZWShA" frameborder="0"
                       allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -542,14 +554,14 @@
               <div class="clearfix"></div>
           </section>
 
-          <section id="contact">
+          <!--section id="contact">
               <div>
                   <div class="contact-text">
                       <h2>let's chat &darr;</h2>
                   </div>
                   <div class="clearfix"></div>
               </div>
-          </section>
+          </section-->
       </main>
       <div class="clearfix"></div>
 
@@ -560,7 +572,7 @@
                         <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                             <i class="fab fa-linkedin-in"></i></a>
                         </li>
-                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                        <li><a href="mailto:g.leyla.ok@gmail.com" alt="email me">
                             <i class="fas fa-envelope"></i></a>
                         </li>
                         <li><a href="https://github.com/okleyla" alt="github">
