--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                           <i class="fa fa-bars"></i>
                       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                       <div class="clearfix"></div>
-                      <li><a data scroll href="#projects">portfolio</a></li>
+                      <li><a data scroll href="#projects">work</a></li>
                       <li><a href="about.html">about</a></li>
-                      <li><a data scroll href="#contact">contact</a></li>
+                      <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
                       </a>
                   </ul>
                   <div class="clearfix"></div>
@@ -46,8 +46,7 @@
                       <h1>freelance ux designer in Milan;</h1>
                       <h1>made in NYC.</h1>
                       <div class="buttons">
-                            <a data scroll href="#projects"><button>view select projects</button></a>
-                            <a href="about.html"><button style="margin-top:.5rem;">proper pronunciation</button></a>
+                            <a href="about.html"><button>proper pronunciation</button></a>
                       </div>
                   </div>
               </section>
@@ -89,7 +88,7 @@
               </div>
           </section>
 
-          <section id="contact">
+          <!--section id="contact">
               <div class="contact">
                   <div class="contact-text">
                       <h2>let's chat &darr;</h2>
@@ -97,7 +96,7 @@
                       <div class="clearfix"></div>
                   </div>
               </div>
-          </section>
+          </section-->
       </main>
       <div class="clearfix"></div>
 
@@ -108,7 +107,7 @@
                         <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                             <i class="fab fa-linkedin-in"></i></a>
                         </li>
-                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                        <li><a href="mailto:g.leyla.ok@gmail.com" alt="email me">
                             <i class="fas fa-envelope"></i></a>
                         </li>
                         <li><a href="https://github.com/okleyla" alt="github">
