updated case study, ready for review

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                               <div class="clearfix"> </div>
                           </div>
                           <br>
-                          <a href="#"><button>download resume</button></a>
+                          <a href="/images/#.pdf" download><button>download resume</button></a>
                     </div>
                 </div>
                 <div class="part">
@@ -105,13 +105,11 @@
                           opportunities:
                           <ul class="list-item">
                               <li>Acquired more than $80 million for programs in resource-poor areas:
-                                affordable housing in Haiti and a fintech study in the Philippines</li>
+                                <a href="https://www.woccu.org/programs/current_programs/haiti/haiti_home">affordable housing in Haiti</a> and a fintech study in the Philippines</li>
                               <li>Designed information architecture and design of SharePoint sites for two companies and managed
                                 the company transition</li>
-                              <div class="dropdown"><li>Keynote speaker for a Filipino national credit union association's annual conference,
-                                to discuss the importance of technology</li>
-                                  <div class="dropdown-content"><img src="images/keynote.png"></div>
-                              </div>
+                              <li><a href="https://www.facebook.com/natcconetwork/photos/a.223993887965495.1073741827.222874298077454/576101469421400/?type=3&theater">Keynote speaker for a Filipino national credit union association's annual conference,
+                              </a>to discuss the importance of technology</li>
                               <li>Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
                           </ul>
 
@@ -133,7 +131,6 @@
                           the ideas or programs that took a community-based approach were the most successful and had the most
                           beneficial side-effects like increased savings.
                         <p>Now, I’m an MBA student at <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>, specializing in product development, marketing, and innovation.
-                          I’ll be getting the management background and understanding I’m confident I’ll need in the future.
                     </div>
                 </div>
                     <div class="clearfix"></div>
