--- a/images.html
+++ b/images.html
@@ -42,7 +42,8 @@
             <img src="images/rfs/data-mining.png">
             <img src="images/rfs/rfs-site-flow.png">
             <img src="images/rfs-blue-shoes.png">
-
+            <img src="images/rfs/jean-story.png">
+            <img src="images/rfs/vincent-story.png">
           </section>
       </main>
   </body>
