--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="second">
                       <div class="content">
                           <a href="coop.html" class="coop-image">
-                                <img src="images/coop-home.png">
+                                <img src="images/coop/coop-home.png">
                           </a>
                           <div class="clearfix"></div>
                           <div class="text">
