updated pie chart border

--- a/rfs.html
+++ b/rfs.html
@@ -168,8 +168,8 @@
                                           label: "Would you buy shoes that were hand-painted?",
                                           data: pieData,
                                           borderColor: "white",
-                                          backgroundColor: ["#e4d1dd", "#eee", "#502b3e"]
-
+                                          backgroundColor: ["#e4d1dd", "#eee", "#502b3e"],
+                                          borderWidth: 5,
                                         }],
                                     },
                                     options: {
