updated user research quote to have a smaller font and container

--- a/rfs.html
+++ b/rfs.html
@@ -137,11 +137,12 @@
                           <a href="https://goo.gl/forms/OaibtHCPK6I0Jp6T2">
                             <button>see survey questions</button></a>
                       </div>
-                      <div class="image-in-bg" id="quote">After three rounds of surveys and data
+                      <div class="image-in-bg" id="quote">
+                        <div id="container">After three rounds of surveys and data
                             mining, I could pinpoint the specific points that would
-                            become issues for branding &mdash; the term <b>“refurbished”</b>
-                            and ambiguity surrounding the <b>process</b>
-                            of refurbishing shoes.
+                            become issues for branding &mdash; the term <b><i>“refurbished”</i></b>
+                            and ambiguity surrounding the <b><i>process</i></b>
+                            of refurbishing shoes.</div>
                       </div>
                       <div class="part" id="container">
                           <h4>Finding a replacement word</h4>
@@ -232,12 +233,21 @@
                       </div>
                       <div class="part">
                           <h4>Standing out</h4>
-                          <p>We wanted to differentiate RFS from them, so looking
-                            at the user research and landscape, we decided on the following:
+                          <p>To differentiate, we focused on price, marketing, and the RFS message:
                           <ul class="lists">
-                              <li><b>Lower price point:</b> $75-$250</li>
-                              <li><b>Marketing:</b> word of mouth, Google ads, and maybe social media</li>
-                              <li><b>Message to customers:</b> Great craftsmanship.</li>
+                              <!--div class="third">
+                                  <img src="images/icons/price-tag.png" style="width:93%;"-->
+                                  <li><b>Lower price point:</b> $75-$250</li>
+                              <!--/div>
+                              <div class="third">
+                                  <img src="images/icons/paper-plane.png"-->
+                                  <li><b>Marketing:</b> word of mouth, Google ads, and social media</li>
+                              <!--/div>
+                              <div class="third">
+                                  <img src="images/icons/speaker.png"-->
+                                  <li><b>Message to customers:</b> Great craftsmanship.</li>
+                              <!--/div-->
+                              <div class="clearfix"></div>
                           </ul>
                       </div>
                       <div class="part">
@@ -347,25 +357,25 @@
                             <div class="third">
                                 <p id="caption" style="text-align:center;">version 1</p>
                                 <img src="images/rfs/rfs-sketch-faq.png" class="full">
-                                <p>Here you'll see the navigation to the left, with
+                                <p><small>Here you'll see the navigation to the left, with
                                   drop-down menus. We decided to place the navigation at
                                   top for consistency and to leave the FAQ content open
-                                  so it was easily searchable.</p>
+                                  so it was easily searchable.</small></p>
                             </div>
                             <div class="third">
                                 <p id="caption" style="text-align:center;">version 2</p>
                                 <img src="images/rfs/rfs-lofi-faq.png" class="full">
-                                <p>This was taken into the next version. Surveyors
+                                <p><small>This was taken into the next version. Surveyors
                                   had asked that the FAQ section include the actual questions
                                   people may ask, rather than just the information, as it
-                                  is presented here.</p>
+                                  is presented here.</small></p>
                             </div>
                             <div class="third">
                                 <p id="caption" style="text-align:center;">version 3</p>
                                 <img src="images/rfs/rfs-faq.png" class="full">
-                                <p>Here is the most final iteration. We made sure that
+                                <p><small>Here is the most final iteration. We made sure that
                                   the top navigation was similar to the main navigation
-                                  for consistency. And made sure to include the questions.</p>
+                                  for consistency. And made sure to include the questions.</small></p>
                                 <div class="clearfix"></div>
                             </div>
                             <div class="clearfix"></div>
