added zoom feature to comp landscape images

--- a/rfs.html
+++ b/rfs.html
@@ -210,23 +210,21 @@
                       <div class="part">
                           <h2>Competitive Landscape</h2>
                           <p>
-                          <p>The stakeholder interview and research determined that
-                            RFS's main competitors are Mr.
-                            Patina, J. Fitzpatrick Shoes, Septieme Largeur, Barker Shoes,
-                            Crocket & Jones, Dandy Shoe Care</p>
                           <ul class="lists">
+                              <li><b>Main competitors:</b> Mr. Patina, J. Fitzpatrick Shoes, Septieme Largeur, Barker Shoes,
+                              Crocket & Jones, and Dandy Shoe Care</li>
                               <li><b>Price point:</b> $300-$1,000</li>
-                              <li><b>Design aesthetic:</b> craftsmanship, old school feel</li>
-                              <li><b>How they market:</b> mainly social media</li>
+                              <li><b>Design aesthetic:</b> craftsmanship, old school </li>
+                              <li><b>How they market:</b> social media</li>
                           </ul>
                           <ul class="inspo" id="no-mobile" style="margin-bottom:0;">
                               <div class="first" style="width:50%;">
-                                  <li><img src="images/inspo1.png" class="first" id="shadow"></li>
-                                  <li><img src="images/inspo2.png" class="second" id="shadow"></li>
+                                  <li><div class="zoom"><img src="images/inspo1.png" class="first" id="shadow"></div></li>
+                                  <li><div class="zoom"><img src="images/inspo2.png" class="second" id="shadow"></div></li>
                               </div>
                               <div class="second" style="width:50%;">
-                                  <li><img src="images/comp3.png" class="first" id="shadow"></li>
-                                  <li><img src="images/inspo3.png" class="second" id="shadow"></li>
+                                  <li><div class="zoom"><img src="images/comp3.png" class="first" id="shadow"></div></li>
+                                  <li><div class="zoom"><img src="images/inspo3.png" class="second" id="shadow"></div></li>
                               </div>
                               <div class="clearfix"></div>
                           </ul>
