minor updates to coop case study so it didn't look off, will fully update once rfs is final

--- a/images.html
+++ b/images.html
@@ -45,6 +45,9 @@
             <img src="images/rfs/jean-story.png">
             <img src="images/rfs/vincent-story.png">
           </section>
+          <section class="coop">
+              <img src="images/coop/barn.jpg">
+          </section>
       </main>
   </body>
 </html>
